--- a/UIAutomationClientBase/UIAutomationClientBase.csproj
+++ b/UIAutomationClientBase/UIAutomationClientBase.csproj
@@ -64,6 +64,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseWindow.cs" />
     <Compile Include="Elements\Application.cs" />
     <Compile Include="Elements\ControlElement.cs" />
     <Compile Include="Elements\Element.cs" />
