--- a/SeleniumBase/packages.config
+++ b/SeleniumBase/packages.config
@@ -3,7 +3,9 @@
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.2.1" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.2.1" targetFramework="net461" />
+  <package id="NUnit" version="3.12.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net461" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
-  <package id="Selenium.WebDriver.ChromeDriver" version="74.0.3729.6" targetFramework="net461" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.35.0" targetFramework="net461" />
 </packages>
