--- a/UIAutomationClientBase/packages.config
+++ b/UIAutomationClientBase/packages.config
@@ -3,6 +3,8 @@
   <package id="Castle.Core" version="3.3.0" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.2.1" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.2.1" targetFramework="net461" />
+  <package id="NUnit" version="3.12.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net461" />
   <package id="TestStack.White.Uia3" version="0.13.3" targetFramework="net461" />
   <package id="UIAComWrapper" version="1.1.0.14" targetFramework="net461" />
 </packages>
