--- a/AppiumBase/AppiumBase.csproj
+++ b/AppiumBase/AppiumBase.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\SampleTestClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
