--- a/AutomationBase/AutomationBase.csproj
+++ b/AutomationBase/AutomationBase.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SampleTestClass.cs" />
     <Compile Include="Utility\EmailUtilities.cs" />
     <Compile Include="Utility\ExcelDataReader.cs" />
     <Compile Include="Utility\ExcelReadWrite.cs" />
@@ -77,6 +78,7 @@
     <Compile Include="Utility\TestDataSources.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="NumberTest.xlsx" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
