--- a/AutomationBase/packages.config
+++ b/AutomationBase/packages.config
@@ -3,6 +3,7 @@
   <package id="DnsClient" version="1.0.7" targetFramework="net461" />
   <package id="ExcelDataReader" version="2.1.2.3" targetFramework="net461" />
   <package id="ExtentReports" version="4.0.3" targetFramework="net461" />
+  <package id="FluentAssertions" version="5.10.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net461" />
   <package id="MongoDB.Bson" version="2.7.2" targetFramework="net461" />
   <package id="MongoDB.Driver" version="2.7.2" targetFramework="net461" />
@@ -14,4 +15,5 @@
   <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
